--- a/app/views/main.html
+++ b/app/views/main.html
@@ -6,19 +6,19 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-xs-10">
+  <div class="col-xs-9">
     <div class="input-group">
       <input type="text" class="form-control input-lg" placeholder="e.g. Radlická 50" ng-model="address" aria-describedby="address">
       <span class="input-group-addon" id="basic-addon2">Praha</span>
     </div>
   </div>
-  <div class="col-xs-2">
-    <button class="btn btn-primary btn-lg" ng-click=main.search(address)>Hledej</button>
+  <div class="col-xs-3">
+    <button class="btn btn-primary btn-lg" ng-click=main.search(address)>What is it like?</button>
   </div>
 </div>
 <div class="info" ng-if="main.info">
   <div class="row">
-    <h3>Public transit</h3>
+    <h4>Public transit</h4>
   </div>
   <div class="row">
     <div class="col-xs-6">
@@ -37,7 +37,7 @@
     </div>
   </div>
   <div class="row">
-    <h3>Drive Info</h3>
+    <h4>Drive Info</h4>
   </div>
   <div class="row">
     <div class="col-xs-6">
@@ -56,7 +56,7 @@
     </div>
   </div>
   <div class="row">
-    <h3><img class="liftago" src="https://www.liftago.com/sites/default/files/logo-160x99.png" alt=""> prices</h3>
+    <h4><img class="liftago" src="https://www.liftago.com/sites/default/files/logo-160x99.png" alt=""> prices</h4>
   </div>
   <div class="row">
     <div class="col-xs-6">
@@ -77,7 +77,7 @@
     </div>
   </div>
   <div class="row">
-    <h3>Location</h3>
+    <h4>Location</h4>
   </div>
   <div class="row">
     <div class="col-xs-6">
@@ -88,7 +88,7 @@
     </div>
   </div>
   <div class="row">
-    <h3>Noise</h3>
+    <h4>Noise</h4>
   </div>
   <div class="row">
     <div class="col-xs-6">
@@ -103,7 +103,7 @@
     </div>
   </div>
   <div class="row">
-    <h3>Pollution</h3>
+    <h4>Pollution</h4>
   </div>
   <div class="row">
     <div class="col-xs-6">
@@ -114,7 +114,7 @@
     </div>
   </div>
   <div class="row">
-    <h3>Tags</h3>
+    <h4>Tags</h4>
   </div>
 
   <div class="row">
@@ -131,4 +131,12 @@
       title="Lot of kids around. More than two schools in neighbourhood.">KIDS</span>
     </div>
   </div>
+</div>
+<div class="error" ng-if="main.error">
+  <div class="alert alert-danger" role="alert">Oops. Something went wrong... <br>
+    Please try again later.
+  </div>
+</div>
+<div class="loading" ng-if="main.loading">
+  <div class="alert alert-info" role="alert">Please wait. Loading...</div>
 </div>
