--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -14,12 +14,14 @@ body {
   margin-bottom: 60px;
 }
 
-h2 {
-  padding-bottom: 30px;
+.input-group {
+  margin-top: 10px;
+  margin-bottom: 30px;
 }
 
-.input-group {
-  padding-bottom: 30px;
+.btn-lg {
+  margin-top: 10px;
+  margin-bottom: 30px;
 }
 
 .logo {
