--- a/app/views/main.html
+++ b/app/views/main.html
@@ -6,14 +6,14 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-xs-9">
+  <div class="col-sm-9 col-xs-12 text-center">
     <div class="input-group">
       <input type="text" class="form-control input-lg" placeholder="e.g. Radlická 50" ng-model="address" aria-describedby="address">
       <span class="input-group-addon" id="basic-addon2">Praha</span>
     </div>
   </div>
-  <div class="col-xs-3">
-    <button class="btn btn-primary btn-lg" ng-click=main.search(address)>What is it like?</button>
+  <div class="col-sm-3 col-xs-12 text-center">
+    <button class="btn btn-primary btn-lg" ng-disabled="!address || address.length < 5" ng-click=main.search(address)>What is it like?</button>
   </div>
 </div>
 <div class="info" ng-if="main.info">
@@ -22,18 +22,18 @@
   </div>
   <div class="row">
     <div class="col-xs-6">
-      To Muzeum
+      {{address}} <span class="glyphicon glyphicon-arrow-right"></span> <img class="logo" src="http://node5.cz/wp-content/themes/node5/img/logo_new.svg" alt="">
     </div>
     <div class="col-xs-6 text-right">
-      {{main.info.transit.rows[0].elements[0].duration.text}}
+      {{main.info.transit.rows[0].elements[1].duration.text}}
     </div>
   </div>
   <div class="row">
     <div class="col-xs-6">
-      To <img class="logo" src="http://node5.cz/wp-content/themes/node5/img/logo_new.svg" alt="">
+      {{address}} <span class="glyphicon glyphicon-arrow-right"></span> Muzeum
     </div>
     <div class="col-xs-6 text-right">
-      {{main.info.transit.rows[0].elements[1].duration.text}}
+      {{main.info.transit.rows[0].elements[0].duration.text}}
     </div>
   </div>
   <div class="row">
@@ -41,7 +41,7 @@
   </div>
   <div class="row">
     <div class="col-xs-6">
-      <img class="logo" src="http://node5.cz/wp-content/themes/node5/img/logo_new.svg" alt="">
+      {{address}} <span class="glyphicon glyphicon-arrow-right"></span> <img class="logo" src="http://node5.cz/wp-content/themes/node5/img/logo_new.svg" alt="">
     </div>
     <div class="col-xs-6 text-right">
       {{main.info.driving.rows[0].elements[0].duration.text}}
@@ -49,7 +49,7 @@
   </div>
   <div class="row">
     <div class="col-xs-6">
-      Muzeum
+      {{address}} <span class="glyphicon glyphicon-arrow-right"></span> Muzeum
     </div>
     <div class="col-xs-6 text-right">
       {{main.info.driving.rows[0].elements[1].duration.text}}
@@ -60,7 +60,7 @@
   </div>
   <div class="row">
     <div class="col-xs-6">
-      To <img class="logo" src="http://node5.cz/wp-content/themes/node5/img/logo_new.svg" alt="">
+      {{address}} <span class="glyphicon glyphicon-arrow-right"></span> <img class="logo" src="http://node5.cz/wp-content/themes/node5/img/logo_new.svg" alt="">
     </div>
     <div class="col-xs-6 text-right">
       {{main.info.liftago[0].price | number : 0}} Kč<br>
@@ -69,7 +69,7 @@
   </div>
   <div class="row">
     <div class="col-xs-6">
-      From Muzeum
+      Muzeum <span class="glyphicon glyphicon-arrow-right"></span> {{address}}
     </div>
     <div class="col-xs-6 text-right">
       {{main.info.liftagoFromMuzeumTo[0].price | number : 0}} Kč<br>
@@ -125,9 +125,9 @@
       title="Party time! At least two clubs close to property!">PARTY</span>
       <span class="label label-primary" ng-if="main.info.stops.results.length > 3"
       title="At least three stops in close distance.">PUBLIC&nbsp;TRANSIT</span>
-      <span class="label label-success" ng-if="main.info.parks.results.length > 0"
+      <span class="label label-success" ng-if="main.info.park.results.length > 0"
       title="Greeeeen!! At least one park in neighbourhood.">NATURE</span>
-      <span class="label label-primary" ng-if="main.info.schools.results.length > 2"
+      <span class="label label-primary" ng-if="main.info.school.results.length > 2"
       title="Lot of kids around. More than two schools in neighbourhood.">KIDS</span>
     </div>
   </div>
