--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row hidden-xs">
   <div class="col-xs-12 text-center">
     <h2>
       <span class="glyphicon glyphicon-home" aria-hidden="true"></span>
@@ -6,14 +6,16 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-sm-9 col-xs-12 text-center">
+  <div class="col-xs-9 text-center">
     <div class="input-group">
       <input type="text" class="form-control input-lg" placeholder="e.g. Radlická 50" ng-model="address" aria-describedby="address">
       <span class="input-group-addon" id="basic-addon2">Praha</span>
     </div>
   </div>
-  <div class="col-sm-3 col-xs-12 text-center">
-    <button class="btn btn-primary btn-lg" ng-disabled="!address || address.length < 5" ng-click=main.search(address)>What is it like?</button>
+  <div class="col-xs-3 text-center">
+    <button class="btn btn-primary btn-lg" ng-disabled="!address || address.length < 5" ng-click=main.search(address)>
+      <span class="glyphicon glyphicon-search"></span>
+    </button>
   </div>
 </div>
 <div class="info" ng-if="main.info">
