Fix air quality

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -101,7 +101,7 @@
       Air quality
     </div>
     <div class="col-xs-6 text-right">
-      {{main.formatAirQuality(main.air)}}
+      {{main.formatAirQuality(main.info.air.value)}}
     </div>
   </div>
   <div class="row">
