--- a/app/views/main.html
+++ b/app/views/main.html
@@ -24,7 +24,9 @@
   </div>
   <div class="row">
     <div class="col-xs-6">
-      {{main.address}} <span class="glyphicon glyphicon-arrow-right"></span> <img class="logo" src="http://node5.cz/wp-content/themes/node5/img/logo_new.svg" alt="">
+      {{main.address}}
+      <span class="glyphicon glyphicon-arrow-right"></span>
+      <img class="logo" src="http://node5.cz/wp-content/themes/node5/img/logo_new.svg" alt="">
     </div>
     <div class="col-xs-6 text-right">
       {{main.info.transit.rows[0].elements[1].duration.text}}
@@ -32,7 +34,9 @@
   </div>
   <div class="row">
     <div class="col-xs-6">
-      {{main.address}} <span class="glyphicon glyphicon-arrow-right"></span> Muzeum
+      {{main.address}}
+      <span class="glyphicon glyphicon-arrow-right"></span>
+      Muzeum
     </div>
     <div class="col-xs-6 text-right">
       {{main.info.transit.rows[0].elements[0].duration.text}}
@@ -43,7 +47,9 @@
   </div>
   <div class="row">
     <div class="col-xs-6">
-      {{main.address}} <span class="glyphicon glyphicon-arrow-right"></span> <img class="logo" src="http://node5.cz/wp-content/themes/node5/img/logo_new.svg" alt="">
+      {{main.address}}
+      <span class="glyphicon glyphicon-arrow-right"></span>
+      <img class="logo" src="http://node5.cz/wp-content/themes/node5/img/logo_new.svg" alt="">
     </div>
     <div class="col-xs-6 text-right">
       {{main.info.driving.rows[0].elements[1].duration.text}}
@@ -51,31 +57,42 @@
   </div>
   <div class="row">
     <div class="col-xs-6">
-      {{main.address}} <span class="glyphicon glyphicon-arrow-right"></span> Muzeum
+      {{main.address}}
+      <span class="glyphicon glyphicon-arrow-right"></span>
+      Muzeum
     </div>
     <div class="col-xs-6 text-right">
       {{main.info.driving.rows[0].elements[0].duration.text}}
     </div>
   </div>
-  <div class="row">
-    <h4><img class="liftago" src="https://www.liftago.com/sites/default/files/logo-160x99.png" alt=""> prices</h4>
-  </div>
-  <div class="row">
-    <div class="col-xs-6">
-      {{main.address}} <span class="glyphicon glyphicon-arrow-right"></span> <img class="logo" src="http://node5.cz/wp-content/themes/node5/img/logo_new.svg" alt="">
+  <div class="liftago" ng-if="main.liftago">
+    <div class="row">
+      <h4><img class="liftago" src="https://www.liftago.com/sites/default/files/logo-160x99.png" alt="">
+        prices</h4>
     </div>
-    <div class="col-xs-6 text-right">
-      {{main.info.liftago[0].price | number : 0}} Kč<br>
-      <small>{{main.info.driving.rows[0].elements[0].duration.text}}</small>
+    <div class="row">
+      <div class="col-xs-6">
+        {{main.address}}
+        <span class="glyphicon glyphicon-arrow-right"></span>
+        <img class="logo" src="http://node5.cz/wp-content/themes/node5/img/logo_new.svg" alt="">
+      </div>
+      <div class="col-xs-6 text-right">
+        {{main.liftago.liftago[0].price | number : 0}}
+        Kč<br>
+        <small>{{main.liftago.driving.rows[0].elements[0].duration.text}}</small>
+      </div>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-xs-6">
-      Muzeum <span class="glyphicon glyphicon-arrow-right"></span> {{main.address}}
-    </div>
-    <div class="col-xs-6 text-right">
-      {{main.info.liftagoFromMuzeumTo[0].price | number : 0}} Kč<br>
-      <small>{{main.info.driving.rows[0].elements[1].duration.text}}</small>
+    <div class="row">
+      <div class="col-xs-6">
+        Muzeum
+        <span class="glyphicon glyphicon-arrow-right"></span>
+        {{main.address}}
+      </div>
+      <div class="col-xs-6 text-right">
+        {{main.liftago.liftagoFromMuzeumTo[0].price | number : 0}}
+        Kč<br>
+        <small>{{main.liftago.driving.rows[0].elements[1].duration.text}}</small>
+      </div>
     </div>
   </div>
   <div class="row">
@@ -84,12 +101,14 @@
   <div class="row">
     <div class="col-xs-6">
       <span class="glyphicon glyphicon-time"></span>
-      {{main.getNoiseLevelAsText(main.info.noiseDay)}} <br>
+      {{main.getNoiseLevelAsText(main.info.noiseDay)}}
+      <br>
       <small>{{main.formatNoise(main.info.noiseDay)}}</small>
     </div>
     <div class="col-xs-6 text-right">
       <span class="glyphicon glyphicon-bed"></span>
-      {{main.getNoiseLevelAsText(main.info.noiseNight)}} <br>
+      {{main.getNoiseLevelAsText(main.info.noiseNight)}}
+      <br>
       <small>{{main.formatNoise(main.info.noiseNight)}}</small>
     </div>
   </div>
@@ -110,26 +129,20 @@
 
   <div class="row">
     <div class="col-xs-12">
-      <span class="label label-primary" ng-if="main.info.pubs.results.length > 3"
-      title="No beer no fun, right? Walk a little bit and choose at least from three pubs/restaurants!">PUBS</span>
-      <span class="label label-primary" ng-if="main.info.nightClubs.results.length > 3"
-      title="Party time! At least two clubs close to property!">PARTY</span>
-      <span class="label label-primary" ng-if="main.info.stops.results.length > 3"
-      title="At least three stops in close distance.">PUBLIC&nbsp;TRANSIT</span>
-      <span class="label label-success" ng-if="main.info.park.results.length > 0"
-      title="Greeeeen!! At least one park in neighbourhood.">NATURE</span>
-      <span class="label label-primary" ng-if="main.info.school.results.length > 2"
-      title="Lot of kids around. More than two schools in neighbourhood.">KIDS</span>
-      <span class="label label-danger" ng-if="main.blueZones(main.info.zones)"
-       title="There are blue parking zones around the property. It means that only residents can park here.">RESIDENT&nbsp;PARKING</span>
-      <span class="label label-danger" ng-if="main.paidZones(main.info.zones)"
-       title="Paid parking available (ie. green, orange zones or some combined ones) in close distance.">PAID&nbsp;PARKING</span>
+      <span class="label label-primary" ng-if="main.info.pubs.results.length > 3" title="No beer no fun, right? Walk a little bit and choose at least from three pubs/restaurants!">PUBS</span>
+      <span class="label label-primary" ng-if="main.info.nightClubs.results.length > 3" title="Party time! At least two clubs close to property!">PARTY</span>
+      <span class="label label-primary" ng-if="main.info.stops.results.length > 3" title="At least three stops in close distance.">PUBLIC&nbsp;TRANSIT</span>
+      <span class="label label-success" ng-if="main.info.park.results.length > 0" title="Greeeeen!! At least one park in neighbourhood.">NATURE</span>
+      <span class="label label-primary" ng-if="main.info.school.results.length > 2" title="Lot of kids around. More than two schools in neighbourhood.">KIDS</span>
+      <span class="label label-danger" ng-if="main.blueZones(main.info.zones)" title="There are blue parking zones around the property. It means that only residents can park here.">RESIDENT&nbsp;PARKING</span>
+      <span class="label label-danger" ng-if="main.paidZones(main.info.zones)" title="Paid parking available (ie. green, orange zones or some combined ones) in close distance.">PAID&nbsp;PARKING</span>
 
     </div>
   </div>
 </div>
 <div class="error" ng-if="main.error">
-  <div class="alert alert-danger" role="alert">Oops. Something went wrong... <br>
+  <div class="alert alert-danger" role="alert">Oops. Something went wrong...
+    <br>
     Please try again later.
   </div>
 </div>
